# rust-web-framework

./: .gitignore  LICENSE  Makefile  README.md
docs/: DDL.sql  menu.sql
server/: Cargo.toml  config.yaml
server/crates/: README.md
server/crates/code/: Cargo.toml  README.md
server/crates/code/src/: main.rs  render.rs  repo.rs  schema.rs  template.rs  test.rs
server/crates/code/src/template/: model.hbs
server/crates/code/template/: domain.hbs  handler.hbs  mod.hbs  model.hbs  repo.hbs  request.hbs  response.hbs  schema.hbs  service.hbs
server/migrations/2023-05-28-095508_sys_user/: up.sql
server/src/: lib.rs  main.rs  models.rs  schema.rs
server/src/common/: error.rs  mod.rs  request.rs  response.rs  validator.rs
server/src/config/: config.rs  mod.rs
server/src/database/: database.rs  mod.rs  paginated.rs  redis.rs  schema.rs
server/src/initialize/: mod.rs
server/src/router/: auth.rs  mod.rs  router.rs
server/src/system/: handler.rs  mod.rs  model.rs  sys_model.rs  user_domain.rs  user_handler.rs  user_repo.rs
server/src/system/auth/: domain.rs  handler.rs  mod.rs
server/src/system/config/: handler.rs  mod.rs  model.rs  repo.rs  request.rs  response.rs  service.rs
server/src/system/dept/: handler.rs  mod.rs  model.rs  repo.rs  request.rs  response.rs  service.rs
server/src/system/menu/: domain.rs  handler.rs  mod.rs  model.rs  repo.rs  request.rs  response.rs  service.rs
server/src/system/role/: handler.rs  mod.rs  model.rs  repo.rs  request.rs  response.rs  service.rs
server/src/system/user/: converter.rs  domain.rs  handler.rs  mod.rs  model.rs  repo.rs  request.rs  response.rs  service.rs
server/src/util/: encrypt.rs  mod.rs
web/: .env  .env.development  package.json  vite.config.ts
web/src/api/demo/: system.ts
web/src/api/demo/model/: systemModel.ts
web/src/api/sys/: menu.ts  user.ts
web/src/api/sys/model/: menuModel.ts  userModel.ts
web/src/enums/: httpEnum.ts
web/src/layouts/default/header/components/: Breadcrumb.vue
web/src/layouts/default/tabs/: useMultipleTabs.ts
web/src/layouts/default/tabs/components/: TabContent.vue
web/src/locales/lang/zh-CN/: sys.ts
web/src/router/: types.ts
web/src/router/helper/: menuHelper.ts  routeHelper.ts
web/src/store/modules/: permission.ts  user.ts
web/src/utils/: encrypt.ts
web/src/utils/http/axios/: index.ts
web/src/views/demo/system/account/: AccountDrawer.vue  AccountModal.vue  DeptTree.vue  account.data.ts  index.vue
web/src/views/demo/system/dept/: DeptDrawer.vue  dept.data.ts  index.vue
web/src/views/demo/system/menu/: MenuDrawer.vue  index.vue  menu.data.ts
web/src/views/demo/system/password/: index.vue  pwd.data.ts
web/src/views/demo/system/role/: RoleDrawer.vue  index.vue  role.data.ts
web/src/views/demo/table/: RefTable.vue  UseTable.vue
web/src/views/sys/login/: LoginForm.vue
