[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
warp = "0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.22.0", features = ["full"] }
axum = "0.6.18"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15.7"
once_cell = "1.8.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }