[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0.99"
warp = "0.3"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
tokio = { version = "1.22.0", features = ["full"] }
axum = { version = "0.6.18", features = ["headers"] }
lazy_static = "1.4.0"
r2d2 = "0.8.9"
diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono","mysql_backend"] }
dotenvy = "0.15.7"
once_cell = "1.8.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.1", features = ["derive"] }
hyper = "0.14"
tower = {version = "0.4",features = ["full"]}
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }
axum-extra = { version = "0.7.4", features = ["form","typed-routing"] }
async-trait = "0.1.67"
http-body = "0.4.3"
thiserror = "1.0.29"
jsonwebtoken = "8.0"
bcrypt = "0.15.0"
rand = "0.8.4"
anyhow = "1.0"
rsa = "0.9.2"
base64 = "0.21.2"
redis = { version = "0.23.0", features = ["tokio-comp"] }