[package]
name = "rwf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"]}
handlebars = { version = "4.3.7", feature = ["full"]}
serde_derive = "1.0.75"
env_logger = "0.10"
#serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"