[package]
name = "code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "code"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"]}
tokio = { version = "1.22.0", features = ["full"] }
handlebars = { version = "4.3.7", feature = ["full"]}
serde_derive = "1.0.75"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
#diesel_cli = { version = "2.1.0", features = ["mysql"] }
